name:                epever
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Brian McKenna
maintainer:          brian@brianmckenna.org
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable example
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
                     , bytestring
                     , halves
                     , haskell-modbus 
                     , lens
                     , serialport
                     , tickle
  default-language:    Haskell2010
